--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   width: 1442px;
-  height: 1442px;
+  height: 100vh;
   background-color: hsl(212, 45%, 89%);
   display: flex;
   justify-content: center;
@@ -12,7 +12,7 @@ body {
   align-items: center;
 }
 .card {
-  border-radius: 10px;
+  border-radius: 20px;
   background-color: white;
   display: flex;
   height: 550px;
@@ -28,7 +28,7 @@ body {
 img {
   margin: 10px;
   padding: 10px;
-  border-radius: 15px;
+  border-radius: 20px;
   align-items: center;
   height: 60%;
   width: 90%;
