--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
 
   height: 100vh;
+  width: 1440px;
   background-color: hsl(212, 45%, 89%);
   display: flex;
   justify-content: center;
