--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   align-items: center;
 }
 .card {
+  flex-wrap: wrap;
   border-radius: 20px;
   background-color: white;
   display: flex;
